--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+body {
+  margin: 0;
+  background: #222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
+canvas {
+  border: 3px solid #fff;
+  image-rendering: pixelated;
+}
